@@ -3525,11 +3525,9 @@ geniCodeSEParms (ast *parms, int lvl)
 /* geniCodeParms - generates parameters                            */
 /*-----------------------------------------------------------------*/
 value *
-geniCodeParms (ast * parms, value * argVals, int *iArg, int *stack, sym_link * ftype, int lvl, iCode *iic_start)
+geniCodeParms (ast *parms, value *argVals, int *iArg, int *stack, sym_link *ftype, int lvl, iCode *iic_start)
 {
   iCode *ic;
-  iCode *castic_start = 0;
-  iCode *castic_end = 0;
   operand *pval;
 
   if (!parms)
@@ -3561,7 +3559,11 @@ geniCodeParms (ast * parms, value * argVals, int *iArg, int *stack, sym_link * f
     }
   else
     {
+      iCode *castic_start = 0;
+      iCode *castic_end = 0;
       bool is_structparm = IS_STRUCT (parms->ftype); // struct parameter handling is hackish.
+      if (iic_start != iCodeChainEnd)
+        castic_start = iCodeChainEnd;
       if (is_structparm)
         {
           sym_link *ptr = newLink (DECLARATOR);
@@ -3578,10 +3580,8 @@ geniCodeParms (ast * parms, value * argVals, int *iArg, int *stack, sym_link * f
         {
           if (is_structparm) // Passing the parameter requires a memcpy.
             {
-              iCode *dstic, *srcic, *nic, *cic, *iic_end;
+              iCode *dstic, *srcic, *nic, *callic, *iic_end;
               // Keep this one in mind in so we can move it later.
-              if (iic_start != iCodeChainEnd)
-                castic_start = iCodeChainEnd;
               operand *dstop = geniCodeCast (FUNC_ARGS(builtin_memcpy->type)->type, operandFromValue (argVals, true), false);
               castic_end = iCodeChainEnd;
               if (IS_REGPARM (FUNC_ARGS (builtin_memcpy->type)->etype))
@@ -3614,13 +3614,13 @@ geniCodeParms (ast * parms, value * argVals, int *iArg, int *stack, sym_link * f
                   nic = newiCode ('=', 0, operandFromLit (getSize (parms->ftype)));
                   IC_RESULT (nic) = operandFromValue (FUNC_ARGS(builtin_memcpy->type)->next->next, false);
                 }
-              cic = newiCode (CALL, operandFromSymbol (builtin_memcpy, false), 0);
-              IC_RESULT (cic) = newiTempOperand (builtin_memcpy->type->next, 0);
-              // Insert before passing any other parameters - otherwise register parameters to the function will instead up as parameters to the memcpy call.
+              callic = newiCode (CALL, operandFromSymbol (builtin_memcpy, false), 0);
+              IC_RESULT (callic) = newiTempOperand (builtin_memcpy->type->next, 0);
+              // Insert before passing any other parameters - otherwise register parameters to the function will instead end up as parameters to the memcpy call.
               if (castic_start)
                 {
                   iCode *castic = castic_start->next;
-                  //Cut out cast from where it is.
+                  // Cut out cast from where it is.
                   castic_start->next = castic_end->next;
                   if (castic_end->next)
                     castic_end->next->prev = castic_start;
@@ -3642,13 +3642,13 @@ geniCodeParms (ast * parms, value * argVals, int *iArg, int *stack, sym_link * f
               srcic->prev = dstic;
               srcic->next = nic;
               nic->prev = srcic;
-              nic->next = cic;
-              cic->prev = nic;
-              cic->next = iic_end;
+              nic->next = callic;
+              callic->prev = nic;
+              callic->next = iic_end;
               if (iic_end)
-                iic_end->prev = cic;
+                iic_end->prev = callic;
               else if (iic_start == iCodeChainEnd)
-                iCodeChainEnd = cic;
+                iCodeChainEnd = callic;
             }
           else
             {
@@ -3665,7 +3665,7 @@ geniCodeParms (ast * parms, value * argVals, int *iArg, int *stack, sym_link * f
             pval = checkTypes (operandFromValue (argVals, false), pval);
           // push
           if (is_structparm)
-            ic = newiCode (IPUSH_VALUE_AT_ADDRESS , pval, operandFromLit (0));
+            ic = newiCode (IPUSH_VALUE_AT_ADDRESS, pval, operandFromLit (0));
           else
             ic = newiCode (IPUSH, pval, NULL);
           ic->parmPush = 1;
